<resources>
    <string name="app_name">Individual Assignment</string>
    <string name="mathematics">Mathematics</string>
    <string name="compare">Compare</string>
    <string name="order">Order</string>
    <string name="composing">Composing</string>
    <string name="compare_numberz">Compare Numberz</string>
    <string name="which_number_is_larger">Which number is larger?</string>
    <string name="which_number_is_smaller">Which number is smaller?</string>
    <string name="ans1">ans1</string>
    <string name="ans2">ans2</string>
    <string name="back">Back</string>
    <string name="button">Button</string>
    <string name="ordering_numberz">Ordering Numberz</string>
    <string name="order_the_following_number_in">Order the following number in</string>
    <string name="numberz">TextView</string>
    <string name="input">Order</string>
    <string name="order1">Button</string>
    <string name="order2">Button</string>
    <string name="order3">Button</string>
    <string name="order4">Button</string>
    <string name="order5">Button</string>
    <string name="order6">Button</string>
    <string name="ascending_order">ascending order</string>
    <string name="decending_order">decending order</string>
    <string name="confirm">Confirm</string>
    <string name="choose_2_numbers_to_complete_the_equations">Choose 2 numbers to complete the equations</string>
    <string name="backbt">Back</string>
    <string name="confirmbt">Confirm</string>
    <string name="equation">equation</string>
    <string name="number_1">Number 1</string>
    <string name="number_2">Number 2</string>
    <string name="number_3">Number 3</string>
    <string name="number_4">Number 4</string>
    <string name="undo">Undo</string>
    <string name="num1">Number 1</string>
    <string name="order_the_numbers_in_nascending_descending_order">Order the numbers in \nascending/descending order</string>
    <string name="backBtn">Back</string>
    <string name="num2">Number 2</string>
    <string name="num3">Number 3</string>
    <string name="num4">Number 4</string>
    <string name="num5">Confirm</string>
    <string name="undoBtn">Undo</string>
    <string name="Button">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="button4">Button</string>
    <string name="button5">Button</string>
    <string name="button6">Button</string>
</resources>