<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="164dp"
        android:layout_height="37dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="218dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="29dp"
        android:clickable="false"
        android:text="@string/mathematics"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="284dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/compareb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compare" />

        <Button
            android:id="@+id/orderb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order" />

        <Button
            android:id="@+id/composeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/composing" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>